<resources>
    <string name="app_name">CiMon</string>
    <string name="header_home">Home</string>
    <string name="header_tracking">Tracking</string>
    <string name="header_detection">Detection</string>
    <string name="header_forum">Forum</string>
    <string name="header_blog">Blog</string>
    <string name="image_classifier_failed">Klasifikasi gambar gagal dijalankan</string>
    <string name="tflitevision_is_not_initialized_yet">TF Lite belum di-inisialisasi</string>
    <string name="txt_instruction">Ambil foto pada cabe anda atau ambil foto dari galeri. Tekan tombol berikut untuk memulai identifikasi</string>
    <string name="txt_instruction2">Tekan tombol dibawah lalu arahkan kamera pada cabai yang ingin diidentifikasi seperti gambar berikut</string>
    <string name="analyze_cercospora">Daun tersebut menunjukkan gejala awal penyakit <b>Cercospora</b>.</string>
    <string name="analyze_nutritional">Daun tersebut menunjukkan gejala awal penyakit <b>Putritional</b>.</string>
    <string name="analyze_mites_and_trips">Daun tersebut menunjukkan gejala awal penyakit <b>Mites and Trips</b>.</string>
    <string name="analyze_powdery_mildew">Daun tersebut menunjukkan gejala awal penyakit <b>Powdery Mildew</b>.</string>
    <string name="analyze_healthy">Daun tersebut menunjukkan cabe <b>Sehat</b>.</string>
    <string name="web_client_id">246037319307-j6aujt1vngfqun6je2ttjrosuvogluvp.apps.googleusercontent.com</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="name_hint">Masukan nama anda</string>
    <string name="email_hint">example@mail.com</string>
    <string name="example_email_format">formatemail@mail.com</string>
    <string name="warning_incorrect_email_format">Gunakan format email yang sesuai</string>
    <string name="insufficient_password">Password must be at least 8 character</string>
    <string name="error_empty_fields">Silahkan lengkapi data terlebih dahulu</string>
    <string name="register_success">Registasi telah berhasil.</string>
    <string name="hint_password">Masukan password</string>
    <string name="error_password_too_short">Password must be at least 8 characters</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akses_cepat">Akses Cepat</string>
    <string name="app_bar_add_post">Tambah Postingan</string>
    <string name="title_text_area">Judul</string>
    <string name="description_text_area_post">Isi deskrippsi postingan</string>
    <string name="btn_galeri">Galeri</string>
    <string name="btn_camera">Kamera</string>
    <string name="description_text">Deskripsi</string>
    <string name="source_text">Source :</string>
    <string name="source_text_input">Kompas</string>
    <string name="date_text">12 November 2024</string>
    <string name="btn_deeplink">Kunjungi Laman</string>
    <string name="app_bar_detail">Detail</string>
    <string name="app_bar_chatbot">Chatbot</string>
    <string name="text_prompt">Masukkan prompt</string>
    <string name="send_prompt">send</string>
    <string name="app_bar_add_tracking">Tambah Tracking</string>
    <string name="text_instruction">Instruksi</string>
    <string name="text_instruction_content">Pilih hari dan waktu sesuai kebutuhan untuk memulai tracking. Tambahkan juga keterangan jika diperlukan.</string>
    <string name="text_date">Tanggal</string>
    <string name="btn_choose">Pilih</string>
    <string name="btn_create_tracking">Buat Tracking</string>
    <string name="app_bar_history">History</string>
    <string name="history_header">Berikut adalah riwayat analisis yang anda simpan</string>
    <string name="never_analyze">Anda belum pernah melakukan analisis</string>
    <string name="add_to_forum_description">tambah ke forum</string>
    <string name="app_bar_klasifikasi">Klasifikasi</string>
    <string name="header_analyze_result">Hasil Analisis</string>
    <string name="text_result_classification">Hasil Klasifikasi Gambar</string>
    <string name="header_result_text">Berikut adalah hasil dari analisis gambar tersebut</string>
    <string name="text_result">hasil</string>
    <string name="text_description_header_low">Keterangan :</string>
    <string name="text_connect_to_internet">Sambungkan ke internet untuk informasi lebih lanjut</string>
    <string name="text_preventation_header">Pencegahan :</string>
    <string name="header_recommendation">Saran Perawatan :</string>
    <string name="welcoming_intro">Selamat datang di CiMon!</string>
    <string name="jargon_1">Awasi, Pindai, Analisis</string>
    <string name="jargon_1_teks">Pindai daun cabai Anda untuk mengenali penyakit dan mendapatkan rekomendasi perawatan</string>
    <string name="jargon_2">Terhubung dengan komunitas</string>
    <string name="jargon_2_teks">Temukan informasi menarik dengan berkomunikasi bersama petani lain pada forum</string>
    <string name="jargon_3">Simpan dan Akses Kapanpun</string>
    <string name="jargon_3_teks">Data dapat diakses meskipun tidak terhubung ke internet. Ayo mulai perjalananmu di CiMon!</string>
    <string name="continue_to_app">Jelajahi CiMon!</string>
    <string name="text_masuk">Masuk!</string>
    <string name="text_masukkan_email_dan_password">Masukkan email dan password</string>
    <string name="text_email">Email</string>
    <string name="doesnt_have_account">Tidak punya akun?</string>
    <string name="text_register">Daftar!</string>
    <string name="text_anonymous">Anonymous</string>
    <string name="text_pengaturan_aplikasi">Pengaturan Aplikasi</string>
    <string name="notif_access">Akses Notifikasi</string>
    <string name="text_keluar_akun">Keluar Akun</string>
    <string name="app_version">CiMon Versi 1.0.0</string>
    <string name="text_daftar">Daftar!</string>
    <string name="register_header">Daftarkan ke CiMon sekarang!</string>
    <string name="text_nama_panggilan">Nama Panggilan</string>
    <string name="text_password">Password</string>
    <string name="text_sudah_punya_akun">Sudah punya akun?</string>
    <string name="btn_save_analyze_result">Simpan Hasil Analisis</string>
    <string name="btn_up_to_server">Unggah ke server</string>
    <string name="app_bar_perbarui_postingan">Perbarui Postingan</string>
    <string name="btn_perbarui_postingan">Perbarui Postingan</string>
    <string name="app_update_tracking">Perbarui Tracking</string>
    <string name="instruction_text_update">Pilih hari dan waktu sesuai kebutuhan untuk memulai tracking. Tambahkan juga keterangan jika diperlukan.</string>
    <string name="text_tanggal">Tanggal</string>
    <string name="btn_perbarui_tracking">Perbarui Tracking</string>
    <string name="btn_hapus_tracking">Hapus Tracking</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_daftar">Daftar</string>
    <string name="or_login_with">atau masuk dengan</string>
    <string name="google_text">Google</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="make_sure_image_clear">Pastikan gambar jelas</string>
    <string name="btn_buka_kamera">Buka Kamera</string>
    <string name="open_buka_galeri">Buka Galeri</string>
    <string name="btn_analuze_now">Analisis sekarang</string>
    <string name="add_to_forum_desc">tambah ke forum</string>
    <string name="text_interactive_camera">Kamera Interaktif</string>
    <string name="text_history">History</string>
    <string name="tracking">Tracking</string>
    <string name="text_post">Post</string>
    <string name="text_chatbot">Chatbot</string>
    <string name="text_pusat_informasi">Pusat Informasi →</string>
    <string name="no_tracking_text">Tidak ada tracking</string>
    <string name="add_track_desc">Tambah Tracking</string>
    <string name="text_hapus_semua">Hapus semua</string>
    <string name="hero_banner">hero banner</string>
    <string name="profile_image">profile_image</string>
    <string name="text_profile_name">Profile Name</string>
    <string name="more_action">more</string>
    <string name="text_confidence_placeholder">Confidence Placeholder</string>
    <string name="text_dibuat_pada">Dibuat pada :</string>
    <string name="text_12_dec_2024">12 Dec 2024</string>
    <string name="text_tercatat">Tercatat</string>
    <string name="text_12">12</string>
    <string name="day_elapsed_text">Hari Terlewati</string>
    <string name="sample_response">This is a sample message that will appear</string>
    <string name="sample_response_bot">This is a sample message that will appear</string>
</resources>