<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/header_home" />

    <item
        android:id="@+id/navigation_tracking"
        android:icon="@drawable/ic_task_done"
        android:title="@string/header_tracking" />

    <item
        android:id="@+id/navigation_detection"
        android:icon="@drawable/ic_detection"
        android:title="@string/header_detection" />

    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum"
        android:title="@string/header_forum" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_blog"
        android:title="@string/header_blog" />

</menu>