<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cimon_chilimonitoring.ui.home.HomeFragment"
        android:label="@string/header_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.example.cimon_chilimonitoring.ui.notifications.TrackingFragment"
        android:label="@string/header_detection"
        tools:layout="@layout/fragment_tracking" />
    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.example.cimon_chilimonitoring.ui.detection.DetectionFragment"
        android:label="@string/header_tracking"
        tools:layout="@layout/fragment_detection" />
    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.cimon_chilimonitoring.ui.forum.ForumFragment"
        android:label="@string/header_forum"
        tools:layout="@layout/fragment_forum" />
    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.example.cimon_chilimonitoring.ui.blog.BlogFragment"
        android:label="@string/header_blog"
        tools:layout="@layout/fragment_blog" />
</navigation>