<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.history.HistoryDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/app_bar_klasifikasi"
            app:navigationIcon="@drawable/ic_arrow_back_ios_24"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/header_analyze_result"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_result_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/gray"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_place_holder"/>

        <TextView
            android:id="@+id/tv_result_analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:textAlignment="center"
            android:text="@string/text_result_classification"
            android:textSize="@dimen/bold_text"/>

        <TextView
            android:id="@+id/tv_result_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/header_result_text" />

        <TextView
            android:id="@+id/tv_result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text_result" />

        <TextView
            android:id="@+id/tv_symptom_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bold_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/text_description_header_low" />

        <TextView
            android:id="@+id/tv_symptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/text_connect_to_internet" />

        <TextView
            android:id="@+id/tv_preventation_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bold_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/text_preventation_header" />

        <TextView
            android:id="@+id/tv_prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/text_connect_to_internet" />

        <TextView
            android:id="@+id/tv_treatment_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bold_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/header_recommendation" />

        <TextView
            android:id="@+id/tv_treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/text_connect_to_internet" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/plus_jakarta_sans"
            android:text="@string/text_date" />
    </LinearLayout>
</ScrollView>