<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chatbot.ChatbotActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/app_bar_chatbot"
        app:navigationIcon="@drawable/ic_arrow_back_ios_24"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintBottom_toTopOf="@id/til_question"
        tools:listitem="@layout/item_chat_message_block" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="15dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_send"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_prompt"
            android:inputType="text"
            android:ems="3"
            tools:ignore="SpeakableTextPresentCheck"
            android:maxLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/send_prompt"
        android:src="@drawable/ic_send_24"
        app:layout_constraintBottom_toBottomOf="@id/til_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/til_question" />

</androidx.constraintlayout.widget.ConstraintLayout>